--- a/main.html
+++ b/main.html
@@ -65,5 +65,7 @@
             <img class="zadnjekolo" src="slike/photo 3 (1).png" alt="zadnjekolo">
         </div>
     </div>
+
+    <asd>
 </body>
 </html>
